force-app/main/default/objects/Charket__WeChatPaymentRefund__c/Charket__WeChatPaymentRefund__c.object-meta.xml
<CustomObject>
    <label>WeChat Payment Refund</label>
    <nameField>
        <displayFormat>WPR-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Payment Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>