force-app/main/default/objects/Charket__WeChatPaymentRefund__c/fields/Charket__Description__c.field-meta.xml
<CustomField>
    <fullName>Charket__Description__c</fullName>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>