force-app/main/default/objects/Charket__WeChatPaymentRefund__c/fields/Charket__RefundTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__RefundTime__c</fullName>
    <label>Refund Time</label>
    <type>DateTime</type>
</CustomField>