force-app/main/default/objects/Charket__WeChatPaymentRefund__c/fields/Charket__SettledRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>Charket__SettledRefundAmount__c</fullName>
    <label>Settled Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>